--- a/Mr_Tada.html
+++ b/Mr_Tada.html
@@ -76,8 +76,8 @@ h1 {
 <body>
 
 <ul class="nav">
-  <li><a href="https://github.com/harris-ippp/hw-6-hajimetada/blob/master/docs/index.html" class="active">Hidden History</a></li>
-  <li><a href="https://github.com/harris-ippp/hw-6-hajimetada/blob/master/docs/Mr_Tada.html">Legendary Generous Donator</a></li>
+  <li><a href="https://github.com/harris-ippp/hw-6-hajimetada/blob/master/docs/index.html">Hidden History</a></li>
+  <li><a href="https://github.com/harris-ippp/hw-6-hajimetada/blob/master/docs/Mr_Tada.html" class="active">Legendary Generous Donator</a></li>
   <li><a href="https://github.com/harris-ippp/hw-6-hajimetada/blob/master/docs/Musterious.html">Mysterious Decision</a></li>
 </ul>
 
@@ -108,8 +108,8 @@ The top three ranking of contributors is as follows:
 <table>
   <tr><th>Rank</th>   <th>Name</th>             <th>Amount</th></tr>
   <tr><td>1st</td>    <td>Hajime Tada</td>      <td>$10,000,000,000</td></tr>
-  <tr><td>2nd</td>    <td>David Booth</td>      <td>----$300,000,000</td></tr>
-  <tr><td>3rd</td>    <td>Pearson Brothers</td> <td>----$100,000,000</td></tr>
+  <tr><td>2nd</td>    <td>David Booth</td>      <td>$300,000,000</td></tr>
+  <tr><td>3rd</td>    <td>Pearson Brothers</td> <td>$100,000,000</td></tr>
 </table>
 
 </body>
