--- a/Mysterious.html
+++ b/Mysterious.html
@@ -76,9 +76,9 @@ h1 {
 <body>
 
 <ul class="nav">
-  <li><a href="https://github.com/harris-ippp/hw-6-hajimetada/blob/master/docs/index.html">Hidden History</a></li>
-  <li><a href="https://github.com/harris-ippp/hw-6-hajimetada/blob/master/docs/Mr_Tada.html">Legendary Generous Donator</a></li>
-  <li><a href="https://github.com/harris-ippp/hw-6-hajimetada/blob/master/docs/Mysterious.html" class="active">Mysterious Decision</a></li>
+  <li><a href="https://htmlpreview.github.io/?https://github.com/harris-ippp/hw-6-hajimetada/blob/master/docs/index.html">Hidden History</a></li>
+  <li><a href="https://htmlpreview.github.io/?https://github.com/harris-ippp/hw-6-hajimetada/blob/master/docs/Mr_Tada.html">Legendary Generous Donator</a></li>
+  <li><a href="https://htmlpreview.github.io/?https://github.com/harris-ippp/hw-6-hajimetada/blob/master/docs/Mysterious.html" class="active">Mysterious Decision</a></li>
 </ul>
 
 <h1>Mysterious Decision: <em>What Happened?</em></h1>
